# I3B

./: README.md
Applicazioni Web/: Esempio Domande Esame.docx  Riassunto Completo Esame.docx
Applicazioni Web/Slide/: Riassunto 1 Applicazioni Web.docx  Riassunto 2 Applicazioni Web.docx
Applicazioni Web/Test/EspeWeb.zip/EspeWeb/: prova.html
Data Science/: Riassunto Esame.docx  Riassunto Primo Test.docx
Data Science/Esercitazioni/Es1/: Esercitazione 01.html  Esercitazione 01.ipynb
Data Science/Esercitazioni/Es10/: Esercitazione 10.ipynb
Data Science/Esercitazioni/Es2/: Esercitazione 02.html  Esercitazione 02.ipynb
Data Science/Esercitazioni/Es3/: Esercitazione 03.html  Esercitazione 03.ipynb
Data Science/Esercitazioni/Es4/: Esercitazione 04.html
Data Science/Esercitazioni/Es5/: Esercitazione 05.html
Data Science/Esercitazioni/Es6/: Esercitazione 06.html  Esercitazione 06.ipynb
Data Science/Esercitazioni/Es7/: Esercitazione 07.html  Esercitazione 07.ipynb
Data Science/Esercitazioni/Es8/: Esercitazione 08 .html  Esercitazione 08 .ipynb
Data Science/Progetto/: Progetto DataScience.docx  Progetto.pptx  Progetto_Gruppo_H Revisione Finale.ipynb
Data Science/Slide/: 02 - Analisi univariata.ipynb  04 - Analisi bivariata.ipynb  05 - Regressione lineare semplice.ipynb  06 - Regressione lineare multipla.ipynb  08 - Classificazione.ipynb
Economia Aziendale 1/: ComfortSit.pptx  Riassunto.docx
Grafica/: Convenzioni Utilizzate per questo progetto.docx  Riassunto Grafica.docx
Grafica/labingsw022018201908supsige/: .gitignore  CMakeLists.txt  README.txt  SupsiGE.workspace  SupsiGraphicEngine.sln
Grafica/labingsw022018201908supsige/Docs/: documentation.tex
Grafica/labingsw022018201908supsige/GauntletClient/: CMakeLists.txt  GauntletClient.aps  GauntletClient.cbp  GauntletClient.vcxproj  GauntletClient.vcxproj.filters  main.cpp  meh_final.max  resource.h
Grafica/labingsw022018201908supsige/GauntletClient/Scene/textures/: gem_blue.dds  gem_purple.dds  gem_red.dds  gold.dds  marble2.dds  wall.dds
Grafica/labingsw022018201908supsige/MockingbirdEngine/: CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  LibApi.h  Light.cpp  Light.h  List.cpp  List.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MockingbirdEngine.aps  MockingbirdEngine.cbp  MockingbirdEngine.vcxproj  MockingbirdEngine.vcxproj.filters  Node.cpp  Node.h  Object.cpp  Object.h  OvoReader.cpp  OvoReader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  resource.h
Grafica/labingsw022018201908supsige/UnitTesting/: CMakeLists.txt  CameraTest.cpp  EngineTest.cpp  LightTest.cpp  ListTest.cpp  MaterialTest.cpp  MeshTest.cpp  NodeTest.cpp  ObjectTest.cpp  TestLauncher.cpp  TextureTest.cpp  UnitTesting.aps  UnitTesting.rc  UnitTesting.vcxproj  UnitTesting.vcxproj.filters  VertexTest.cpp  resource.h
Grafica/labingsw022018201908supsige/scene/: finalTransparent.OVO
Grafica/labingsw022018201908supsige/scene/textures/: gem_green.dds  gem_yellow.dds
Ingegneria del SW 2/: Abstract Factory Pattern.docx  Riassunto Esame.docx
Ingegneria del SW 2/Presentazioni Progetto/: GraphicsEngine.mdj  Presentazione BThread.pptx  Presentazione Grafica.pptx
Ingegneria del SW 2/Progetti/labingsw022018201908bthread/: .gitignore  out.txt  pom.xml
Ingegneria del SW 2/Progetti/labingsw022018201908bthread/gitinspector/: 20181112.gitinspector.html  (+1 more)
Interazione Uomo Macchina/: Riassunto HCI.docx
MultimediaProcessing/Slides/: Riassunto Parte Audio .docx  Riassunto parte immagine.docx
Sistemi Operativi/: Riassunto BThread.docx  Riassunto Esame .docx  Riassunto primo test.docx  Riassunto secondo test.docx
(+99 files in other folders)
